# abop-app

./: .gitignore  .tarpaulin.toml  CLAUDE.md  CLEANUP_RESULTS.md  CLEANUP_TRACKING.md  CLIPPY_ANALYSIS_PROMPT.md  COLOR_SYSTEM_CONSOLIDATION_PLAN.md  COMPREHENSIVE_CODE_REVIEW_CHECKLIST.md  Cargo.toml  DATABASE_CONNECTION_FIX_PLAN.md  GUI_COMPILATION_ERRORS_ANALYSIS.md  NEXT_SESSION_PROMPT.md  PHASE_1_SPRINT_PLAN.md  PR_SUMMARY.md  README.md  REFINERY_PROMPT.md  REFINE_PROMPT.md  contrast_test.rs  debug_path_matching.rs  debug_silence_test.rs  final_validation_test.ps1  gui-errors-detailed.json  rust-toolchain.toml  test_database_centralization.ps1  test_db_simple.ps1  update_audiobook.py
.claude/: settings.local.json
abop-cli/: Cargo.toml
abop-cli/src/: cli.rs  constants.rs  error.rs  main.rs  output.rs  tests.rs  utils.rs
abop-cli/src/commands/: db.rs  mod.rs  scan.rs
abop-core/: Cargo.toml
abop-core/benches/: resampler_benchmark.rs
abop-core/db/migrations/: 001_create_audiobooks.sql  001_initial_schema.sql  001_initial_schema_down.sql  002_add_bookmarks.sql  002_add_bookmarks_down.sql
abop-core/examples/: check_database_content.rs  debug_path_matching.rs  enhanced_connection_demo.rs  validate_centralization.rs
abop-core/src/: component.rs  config.rs  constants.rs  error.rs  lib.rs  message.rs  services.rs  test_constants.rs
abop-core/src/app/: message.rs  mod.rs  state.rs  update.rs
abop-core/src/audio/: decoder.rs  metadata.rs  mod.rs  player.rs
abop-core/src/audio/processing/: batch_processor.rs  casting_utils.rs  channel_mixer.rs  error.rs  file_io.rs  mod.rs  normalizer.rs  pipeline.rs  resampler.rs  silence_detector.rs  traits.rs  utils.rs  validation.rs
abop-core/src/config/: app.rs  ui.rs  validation.rs
abop-core/src/db/: connection.rs  connection_adapter.rs  datetime_serde.rs  error.rs  health.rs  helpers.rs  mappers.rs  migrations.rs  mod.rs  mod_old.rs  operations.rs  queries.rs  repository.rs  retry.rs  statistics.rs
abop-core/src/db/migrations/: 001_initial_schema.sql  001_initial_schema_down.sql  002_add_bookmarks.sql  002_add_bookmarks_down.sql  002_add_selected_column.sql  002_add_selected_column_down.sql  003_remove_bookmarks.sql  003_remove_bookmarks_down.sql
abop-core/src/db/queries/: get_audiobook.sql  get_audiobooks_by_library.sql  get_progress.sql  insert_audiobook.sql  upsert_progress.sql
abop-core/src/db/repositories/: audiobook.rs  audiobook_fixed.rs  audiobook_new.rs  library.rs  library_backup.rs  mod.rs  progress.rs  progress_fixed.rs  progress_test.rs
abop-core/src/error/: macros.rs
abop-core/src/models/: audiobook.rs  core.rs  library.rs  mod.rs  progress.rs  search.rs  ui.rs
abop-core/src/models/ui/: constants.rs  data_repository.rs  mod.rs  persistence.rs  state.rs  types.rs
abop-core/src/platform/: mod.rs
abop-core/src/platform/windows/: env_utils.rs  mod.rs  path_utils.rs
abop-core/src/scanner/: config.rs  constants.rs  core_scanner.rs  error.rs  file_discovery.rs  file_processor.rs  library_scanner.rs  library_scanner_old.rs  mod.rs  orchestrator.rs  performance.rs  progress.rs  result.rs  state.rs  task_manager.rs  thread_pool.rs  thread_pool.rs.backup
abop-core/src/scanner/platform_tests/: mod.rs
abop-core/src/test_utils/: audio.rs  data.rs  mod.rs
abop-core/src/utils/: enhanced.rs  mod.rs  path.rs  size.rs  time.rs  timer.rs
abop-core/src/utils/casting/: core.rs  error.rs  mod.rs
abop-core/src/validation/: error.rs  mod.rs  recovery.rs  repair_constants.rs  repair_handler.rs  repair_patterns.rs  state_validator.rs  validators.rs
abop-core/tests/: audio_analysis_tests.rs  audio_handler_tests.rs  audio_operations_tests.rs  audio_processing_tests.rs  casting_tests.rs  concurrency_tests.rs  config_modular_tests.rs  config_persistence_tests.rs  db_operations_test_new.rs  db_operations_tests.rs  debug_config_format.rs  error_handling_tests.rs  error_macros_tests.rs  scanner_async_tests.rs  scanner_integration_tests.rs  test_helpers.rs  utils_tests.rs
abop-gui/: Cargo.toml  README.md  build.rs
abop-gui/benches/: component_rendering.rs
abop-gui/docs/: button_strategy_refactoring.md  color_strategy_system.md  styling_system.md
abop-gui/docs/testing/: README.md  component-tests.md
abop-gui/scripts/: setup_fonts.ps1  update_material_fonts.ps1
abop-gui/src/: app.rs  app_test.rs  assets.rs  lib.rs  main.rs  messages.rs  router.rs  state.rs  state_test.rs  test_utils.rs  theme.rs  update.rs
abop-gui/src/audio/: mod.rs  player.rs  processing.rs
abop-gui/src/commands/: audio.rs  library.rs  mod.rs
abop-gui/src/components/: about.rs  audio_controls.rs  audio_toolbar.rs  icon_support.rs  icons.rs  main_toolbar.rs  mod.rs  scanner_progress.rs  status.rs  table_core.rs  table_header.rs  table_row.rs  task_manager.rs  tests.rs
abop-gui/src/constants/: mod.rs  sort.rs
abop-gui/src/design_tokens/: colors.rs  components.rs  constants.rs  elevation.rs  material.rs  mod.rs  radius.rs  shadows.rs  sizing.rs  spacing.rs  typography.rs  ui.rs
abop-gui/src/handlers/: data_updates.rs  mod.rs  placeholders.rs  tests.rs  ui_state.rs
abop-gui/src/platform/: mod.rs
abop-gui/src/state/: tests.rs
abop-gui/src/state_refactored/: library_state.rs  mod.rs  player_state.rs  progress_cache.rs  task_state.rs  ui_state.rs
abop-gui/src/styling/: color_utils.rs  design_tokens.rs  dynamic_themes.rs  input.rs  mod.rs  plugins.rs  scrollable.rs  testing.rs  traits.rs  utils.rs  validation.rs
abop-gui/src/subscriptions/: mod.rs  scan_progress.rs
abop-gui/src/testing/: button_contrast_tests.rs  button_contrast_validation.rs  mod.rs
abop-gui/src/utils/: mod.rs  path_utils.rs  safe_conversions.rs
abop-gui/src/views/: about.rs  audio_processing.rs  library.rs  mod.rs  settings.rs  tests.rs
abop-gui/tests/: button_contrast_tests.rs  color_debug_test.rs  common_button_tests.rs  disabled_color_validation.rs  file_handler_tests.rs  material_button_widget_tests.rs  material_tokens_phase2_tests.rs  material_tokens_tests.rs  shared_test_helpers.rs
abop-gui/themes/: example_dark.toml  example_light.json
(+314 files in other folders)
