[workspace]
members = [
    "abop-core",
    "abop-gui",
    "abop-cli"
]
resolver = "2"

[workspace.dependencies]
# GUI and UI frameworks
iced = { version = "0.13", features = ["tokio", "advanced"] }
iced_font_awesome = "0.2"

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7" }
tokio-stream = "0.1"
tokio-test = "0.4"
futures = "0.3"
async-trait = "0.1"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
log = "*"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
humantime-serde = "1.1"

# File system and I/O
walkdir = "2"
dirs = "5"
tempfile = "3"
rfd = "0.14"

# Audio processing
symphonia = "*"
rodio = "*"
hound = "*"
id3 = "*"
mp4ameta = "*"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "*"
r2d2_sqlite = "0.24"

# Performance and utilities
rayon = "*"
num_cpus = "*"
lru = "*"
once_cell = "1"
bitflags = "2"
bytemuck = "*"
rand = "*"

# Graphics and fonts
fontdb = "*"
palette = "*"
kurbo = "*"

# System and platform
getrandom = "0.2"
hashbrown = "0.14"
libloading = "0.8"
parking_lot = "0.12"

# CLI tools
clap = { version = "*", features = ["derive"] }
env_logger = "0.10"

# Math
num-complex = "0.4"

# Development tools
cfg_aliases = "*"

[workspace.lints.clippy]
# Promote important lints to warnings (keeping best practices)
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
doc_markdown = "warn"
float_cmp = "warn"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/abop"
description = "A modern, efficient audiobook management system built with Rust and Iced"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1
