[workspace]
members = [
    "abop-core",
    "abop-gui",
    "abop-cli"
]
resolver = "2"

[workspace.dependencies]
# GUI and UI frameworks
iced = { version = "^0.13", features = ["tokio", "advanced"] }
iced_font_awesome = "*"

# Async runtime and utilities
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*" }
tokio-stream = "*"
tokio-test = "*"
futures = "*"
async-trait = "*"

# Serialization and configuration
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"

# Error handling
thiserror = "*"
anyhow = "*"

# Logging and tracing
log = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }

# Time and UUID
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["v4", "serde"] }
humantime-serde = "*"

# File system and I/O
walkdir = "*"
dirs = "*"
tempfile = "*"
rfd = "*"

# Audio processing
symphonia = "*"
rodio = "*"
hound = "*"
id3 = "*"
mp4ameta = "*"

# Database
rusqlite = { version = "*", features = ["bundled"] }
r2d2 = "*"
r2d2_sqlite = "*"

# Performance and utilities
rayon = "*"
num_cpus = "*"
lru = "*"
once_cell = "*"
bitflags = "*"
bytemuck = "*"
rand = "*"

# Graphics and fonts
fontdb = "*"
palette = "*"
kurbo = "*"

# System and platform
getrandom = "*"
hashbrown = "0.14"
libloading = "0.8"
parking_lot = "*"

# CLI tools
clap = { version = "*", features = ["derive"] }
env_logger = "*"

# Math
num-complex = "*"

# Development tools
cfg_aliases = "*"

[workspace.lints.clippy]
# Promote important lints to warnings (keeping best practices)
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
doc_markdown = "warn"
float_cmp = "warn"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/abop"
description = "A modern, efficient audiobook management system built with Rust and Iced"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1
