[workspace]
members = [
    "abop-core",
    "abop-gui",
    "abop-cli"
]
resolver = "2"

[workspace.dependencies]
# GUI and UI frameworks
iced = { version = "0.13.1", features = ["tokio", "advanced"] }
iced_font_awesome = "0.2.1"

# Async runtime and utilities
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
tokio-util = "0.7.15"
futures = "0.3.31"
async-trait = "0.1.88"

# Serialization and configuration
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Logging and tracing
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Time and UUID
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
humantime-serde = "1.1.1"

# File system and I/O
walkdir = "2.5.0"
dirs = "6.0.0"
tempfile = "3.20.0"
rfd = "0.15.3"

# Audio processing
symphonia = "0.5.4"
rodio = "0.20.1"
hound = "3.5.1"
id3 = "1.15.0"
mp4ameta = "0.11.0"

# Database
rusqlite = { version = "0.36.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.30.0"

# Performance and utilities
rayon = "1.10.0"
lru = "0.14.0"
once_cell = "1.19.0"
bitflags = "2.9.1"
bytemuck = "1.23.1"
rand = "0.9.1"

# Graphics and fonts
fontdb = "0.23.0"
palette = "0.7.6"
# System and platform
getrandom = "0.3.3"
hashbrown = "0.15.4"
libloading = "0.8.8"
parking_lot = "0.12.4"

# CLI tools
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"

# Math
num-complex = "0.4.6"
[workspace.lints.clippy]
# Promote important lints to warnings (keeping best practices)
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
doc_markdown = "warn"
float_cmp = "warn"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/abop"
description = "A modern, efficient audiobook management system built with Rust and Iced"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1
