[package]
name = "abop-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line interface for ABOP - Audiobook Organizer & Processor"
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
abop-core = { path = "../abop-core" }

# Workspace dependencies
clap.workspace = true
env_logger.workspace = true
tokio.workspace = true
anyhow.workspace = true
log.workspace = true

[dev-dependencies]
# Test dependencies
tempfile = "3.20"
