[package]
name = "abop-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
bench = ["simd"]  # Enable benchmarking features
simd = []  # Enable SIMD optimizations where available

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
# Workspace dependencies
thiserror.workspace = true
log.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
once_cell.workspace = true
bitflags.workspace = true
fontdb.workspace = true
getrandom.workspace = true
hashbrown.workspace = true
libloading.workspace = true
dirs.workspace = true
walkdir.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
symphonia.workspace = true
rodio.workspace = true
hound.workspace = true
rayon.workspace = true
bytemuck.workspace = true
rand.workspace = true
async-trait.workspace = true
humantime-serde.workspace = true
tempfile.workspace = true
rusqlite.workspace = true

# Platform-specific dependencies
directories = { version = "5.0.0", default-features = false }

# Non-workspace dependencies that override workspace versions
iced = { version = "0.13.1", features = ["tokio", "advanced"] }
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
tokio-util = "0.7"
lru = "0.12"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
num_cpus = "1.16"

[dev-dependencies]
anyhow = "1.0"  # For examples
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5.1"  # For floating-point comparisons in tests
tokio-test.workspace = true
