[package]
name = "abop-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
bench = ["simd"]  # Enable benchmarking features
simd = []  # Enable SIMD optimizations where available
test-utils = []  # Enable test utilities for external use

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
# Workspace dependencies
thiserror.workspace = true
log.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
once_cell.workspace = true
bitflags.workspace = true
fontdb.workspace = true
getrandom.workspace = true
hashbrown.workspace = true
libloading.workspace = true
dirs.workspace = true
walkdir.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
symphonia.workspace = true
rodio.workspace = true
hound.workspace = true
rayon.workspace = true
bytemuck.workspace = true
rand.workspace = true
async-trait.workspace = true
humantime-serde.workspace = true
tempfile.workspace = true
rusqlite.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-util.workspace = true
lru.workspace = true
tracing.workspace = true
serde.workspace = true

# Platform-specific dependencies
directories = { version = "6.0.0", default-features = false }

# Core-specific dependencies that override workspace versions for specific features
# Note: iced dependency removed - moved to abop-gui layer for proper separation

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
approx = "0.5.1"  # For floating-point comparisons in tests
