[package]
name = "abop-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Iced GUI for ABOP - Audiobook Organizer & Processor"
license.workspace = true
repository.workspace = true

[features]
# Enable test utilities for benchmarking
bench = []

[dependencies]
# Internal dependencies
abop-core = { path = "../abop-core" }

# Workspace dependencies
futures.workspace = true
iced_font_awesome.workspace = true
palette.workspace = true
parking_lot.workspace = true
rfd.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
once_cell.workspace = true
tokio.workspace = true

# GUI-specific iced features
iced = { workspace = true, features = [
    "canvas",
    "image",
    "svg",
    "tokio",
    "advanced"
] }
rusqlite.workspace = true
symphonia.workspace = true
rodio.workspace = true
num-complex.workspace = true
hound.workspace = true
rayon.workspace = true
bytemuck.workspace = true

# Direct dependencies (not in workspace)
material-color-utilities-rs = "*"

[dev-dependencies]
approx = "*"  # For floating-point comparisons in tests
criterion.workspace = true
