[package]
name = "abop-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Iced GUI for ABOP - Audiobook Organizer & Processor"
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
abop-core = { path = "../abop-core" }

# Workspace dependencies
futures.workspace = true
iced_font_awesome.workspace = true
palette.workspace = true
parking_lot.workspace = true
rfd.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
walkdir.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
once_cell.workspace = true
tokio.workspace = true

# GUI-specific iced features
iced = { workspace = true, features = [
    "canvas",
    "image",
    "svg",
    "tokio",
    "advanced"
] }
rusqlite.workspace = true
symphonia.workspace = true
rodio.workspace = true
hound.workspace = true
rayon.workspace = true

# Direct dependencies (not in workspace)
# Pin to the resolved version from Cargo.lock for reproducibility
material-color-utilities-rs = "0.2.1"

[dev-dependencies]
# Pin to the resolved version from Cargo.lock for reproducibility
approx = "0.5.1"  # For floating-point comparisons in tests
